--- a/icra.tex
+++ b/icra.tex
@@ -24,6 +24,7 @@
 %\usepackage{times} % assumes new font selection scheme installed
 \usepackage{amsmath} % assumes amsmath package installed
 \usepackage{amssymb}  % assumes amsmath package installed
+\usepackage{cite}
 \DeclareMathOperator{\sgn}{sgn}
 \title{\LARGE \bf
 Simulation-Driven Robot Controller Design
