--- a/optimization.tex
+++ b/optimization.tex
@@ -1,5 +1,6 @@
 \section{Controller Optimization}
 \karen{If the goal is to create robust controllers, can we later use the calibrated simulation parameters to create a feedback controller (\eg using inverted pendulum model) via simulator?}
+\jie{I hope so but I do not know. Since our experiments only cover open-loop control, it might not be necessary to speculate whether our system will work on feedback controller in the paper. But I still mention that extending the current system to feedback controllers is one of the future wok.}
 
 Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The four tasks that we use to test our system are rising from a sitting, leaning or kneeling position and flipping towards a handstand position (Figure \ref{fig:sit2Stand}, \ref{fig:lean2Stand}, \ref{fig:kneel2Stand} and \ref{fig:stand2Hand}). For each task, the joint configuration of the initial pose and the final pose are provided by the user. The goal of controller optimization is to find a sequence of control signals $\bar{q}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to use only open-loop controllers\footnote{Note that there is still an internal feedback loop in the actuators to track the desired joint angle. However, this feedback loop is not fully programmable and we do not alter this feedback loop in our controller design.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a only function of time $t$ and does not depend on the states of the robot. Using only the open-loop controller is important to evaluate our system. It puts simulation calibration into a more thorough test because the accuracy of the simulation becomes more critical if feedback control is not allowed.
 
@@ -13,13 +14,16 @@ We first formulate a trajectory optimization problem for each task.
 \end{align}
 
 \karen{At this point, it is not clear how we get \vc{q} and \vc{f} in the optimization.}
+\jie{Let's wait for Byron and see his opinion on this.}
 This optimization searches for the duration $T$ of the entire motion and the trajectory of the desired joint configuration $\bar{\mathbf{q}}(t)$ to maximize a task-related fitness function $V_{ctrl}$, and subject to physical constraints (eq.(\ref{eqn:dyn1})) and boundary conditions (eq.(\ref{eqn:boundary1}) and (\ref{eqn:boundary2})). $\mathbf{x}_0$ is the initial condition, and $\mathbf{q}_T$ is the final pose. Note that although we can specify the full state in the initial condition, we can only specify the desired joint angles for the final pose because the global translation and rotation are determined by the physical simulation.
 
-We parameterize the desired trajectory $\bar{\mathbf{q}}(t)$ to reduce the dimension of the optimization problem. Although there are many ways that we can parameterize the control space, designing the most effective control parametrization is not the focus of this work. In this work, we choose a simple parametrization that use a sparse set of keyframes $\bar{\mathbf{q}}_1, \bar{\mathbf{q}}_2, ..., \bar{\mathbf{q}}_n$. In between the keyframes, we linearly interpolate the poses from two adjacent keyframes. With this simplification, the \emph{control parameters} that we need to optimize reduce to only a few keyframes and the time intervals between adjacent keyframes. 
-
-Assuming no inter-body collision happens when the robot executes $\bar{\mathbf{q}}(t)$, in our tasks, the robot can always reach the final pose $\mathbf{q}_T$ within a small error due to the weight of the bodies that each actuator supports \karen{Not clear to me.}. The criterion of success for all the tasks is whether the robot remains upright at the end of its motion. We use the following fitness function to reward controllers that keep balance throughout the entire motion.
+We parameterize the desired trajectory $\bar{\mathbf{q}}(t)$ to reduce the dimension of the optimization problem. Although there are many ways that we can parameterize the control space, designing the most effective control parametrization is not the focus of this work. In this work, we choose a simple parametrization that use a sparse set of keyframes $\bar{\mathbf{q}}_1, \bar{\mathbf{q}}_2, ..., \bar{\mathbf{q}}_n$. In between the keyframes, we linearly interpolate the poses from two adjacent keyframes. With this simplification, the \emph{control parameters} that we need to optimize reduce to only a few keyframes and the time intervals between adjacent keyframes.
 
 \karen{Why do we have to assume no inter-body collision? There are many other possible ways that the desired trajectoires achieve the objective in an undesired way (\eg jump of the ground), do we also need to assume that those situations won't happen? More fundamental question: how can we make any of these assumptions while our optimizer doesn't know about these assumptions?}
+\jie{I removed the first few sentences that confuse you. Actually we do not assume anything. If the robot jumps off the ground in the simulation, we do not do anything to prevent that. You can see this from the video of stand-to-handstand. Before simulation calibration, the optimal controller indeed jumps in the simulation. But after calibration, the optimal controller does not jump in the simulation, which matches the real world performance. In term of self-collision, it did not happen because we chose a reasonable range of joint angles to search in CMA.}
+
+The criterion of success for all the tasks is whether the robot remains upright at the end of its motion. We use the following fitness function to reward controllers that keep balance throughout the entire motion.
+
 
 \begin{equation}
   V_{ctrl}(\mathbf{x}(t))=\int_0^{T+1} \frac{1}{\alpha(t)+\epsilon}\mathrm{d}t
