changed the title.

--- a/icra.tex
+++ b/icra.tex
@@ -27,7 +27,7 @@
 \usepackage{cite}
 \DeclareMathOperator{\sgn}{sgn}
 \title{\LARGE \bf
-Simulation-Driven Robot Controller Design
+Design Dynamically Balanced Humanoids Using Simulation
 }
 
 
